--- a/04_10_2019/py_cop_04_10_2019.html
+++ b/04_10_2019/py_cop_04_10_2019.html
@@ -13084,6 +13084,25 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Table-of-contents:">Table of contents:<a class="anchor-link" href="#Table-of-contents:">&#182;</a></h2><ul>
+<li>Tools</li>
+<li>General tips</li>
+<li>Comprehensions vs filter/map</li>
+<li>String formatting</li>
+<li>All asterisk usecase</li>
+<li>Everything is an object</li>
+<li>Duck typing</li>
+<li>Monkey patching</li>
+<li>Decorators</li>
+<li>Memoization</li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Python-is-a-religion-almost-as-popular-as-Islam">Python is a religion almost as popular as Islam<a class="anchor-link" href="#Python-is-a-religion-almost-as-popular-as-Islam">&#182;</a></h3>
 </div>
 </div>
